Wrapped the header element, section and footer with divs

--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -21,6 +21,7 @@
         <main>
             <div>
             <h1>Homepage</h1>
+            <div>
             <section>
                 <h2>We help you build your brand!</h2>
             </section>
@@ -85,9 +86,12 @@
                 Aside
             </aside>
             </div>
+            </div>
         </main>
         <div>
-        <footer>Footer</footer>
+        <footer>
+            Footer
+        </footer>
         </div>
     </body>
 </html>
