--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -12,8 +12,6 @@
         <header>
             <div>
             <span>Techium</span>
-            </div>
-            <div>
             <nav>
                 
             </nav>
@@ -102,9 +100,7 @@
             </div>
         </main>
         <div>
-        <footer>
-            Footer
-        </footer>
+        <footer>Footer</footer>
         </div>
     </body>
 </html>
