--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -99,8 +99,10 @@
             </aside>
             </div>
         </main>
-        <div>
-        <footer>Footer</footer>
-        </div>
+        <footer>
+            <div>
+            Footer
+            </div>
+        </footer>
     </body>
 </html>
