--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+
         <!-- Header -->
         <header>
             <div>
@@ -22,6 +23,8 @@
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
+
+            <!-- Hero section -->
             <section>
                 <div>
                 <h2>We help you build your brand!</h2>
