--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -174,9 +174,8 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video controls loop>
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="">
-                    <img src="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" alt="">
+                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
+                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
                     Sorry, your browser doesn't support HTML5 video.
                 </video>
             </section>
